# MicaTerm

./: .gitignore  Cargo.toml  bug_remain.md  build-desktop.sh  build-linux-x64-femtovg-wgpu.sh  build-release.sh  build-win-x64-femtovg-wgpu.sh  build-win-x64-gnu-femtovg-wgpu.sh  build-win-x64-repro.sh  build-win-x64-skia.sh  build-win-x64.sh  build.rs  oxideterm-learn.md  readme.md  todo.md  verification.md
docs/plans/: 2026-03-10-desktop-build-matrix-design.md  2026-03-10-desktop-build-matrix-implementation-plan.md  2026-03-10-icon-logo-design.md  2026-03-10-icon-logo-implementation-plan.md  2026-03-10-icon-logo-tdd-spec.md  2026-03-10-overall-style-design.md  2026-03-10-overall-style-implementation-plan.md  2026-03-10-overall-style-tdd-spec.md  2026-03-10-overall-style-verification.md  2026-03-10-top-status-bar-design.md  2026-03-10-top-status-bar-implementation-plan.md  2026-03-10-windows-build-script-implementation-plan.md  2026-03-11-sidebar-layout-shell-bugfix-design.md  2026-03-11-sidebar-layout-shell-bugfix-implementation-plan.md  2026-03-11-sidebar-layout-shell-bugfix-tdd-spec.md  2026-03-11-sidebar-navigation-design.md  2026-03-11-sidebar-navigation-implementation-plan.md  2026-03-11-sidebar-navigation-tdd-spec.md  2026-03-11-system-logging-design.md  2026-03-11-system-logging-implementation-plan.md  2026-03-11-theme-toggle-window-appearance-design.md  2026-03-11-theme-toggle-window-appearance-tdd-spec.md  (+35 more)
scripts/: export-icons.sh
src/: lib.rs  main.rs
tests/: accessibility_floor.rs  bootstrap_logging_contract_smoke.sh  bootstrap_profile_smoke.rs  bootstrap_smoke.rs  build_desktop_script_smoke.sh  build_linux_x64_femtovg_wgpu_script_smoke.sh  build_release_script_smoke.sh  build_win_x64_femtovg_wgpu_script_smoke.sh  build_win_x64_gnu_femtovg_wgpu_script_smoke.sh  build_win_x64_repro_script_smoke.sh  build_win_x64_script_smoke.sh  build_win_x64_skia_script_smoke.sh  export_icons_smoke.sh  femtovg_wgpu_contract_smoke.sh  fluent_titlebar_assets_smoke.sh  icon_svg_assets_smoke.sh  logging_cleanup.rs  logging_paths.rs  logging_runtime.rs  panic_logging.rs  runtime_profile.rs  shell_layout_policy.rs  shell_layout_ui_contract_smoke.sh  shell_view_model.rs  sidebar_assets_smoke.sh  sidebar_navigation_smoke.rs  sidebar_navigation_spec.rs  sidebar_tooltip_ui_contract_smoke.sh  sidebar_ui_contract_smoke.sh  signature_surfaces.rs  status_motion.rs  theme_spec.rs  titlebar_layout_spec.rs  titlebar_render_spec.rs  tooltip_debug_log.rs  top_status_bar_smoke.rs  top_status_bar_ui_contract_smoke.sh  ui_preferences.rs  window_effects.rs  window_geometry_spec.rs  (+11 more)
ui/: app-window.slint  windows-theme-repro.slint
(+46 files in other folders)
