[package]
name = "mica-term"
version = "0.1.0"
edition = "2024"

[features]
default = ["slint-renderer-software"]
slint-renderer-software = ["slint/renderer-software"]
windows-skia-experimental = ["slint/renderer-skia"]

[dependencies]
anyhow = "1.0.102"
directories = "5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "backend-winit",
    "compat-1-2",
    "unstable-winit-030",
] }
tokio = "1.50.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
window-vibrancy = "0.7.1"

[build-dependencies]
slint-build = "1.15.1"
winresource = "0.1.19"

[dev-dependencies]
filetime = "0.2"
i-slint-backend-testing = "1.15.1"
