[package]
name = "mica-term"
version = "0.1.0"
edition = "2024"

[features]
default = ["slint-renderer-software"]
slint-renderer-software = ["slint/renderer-software"]
slint-renderer-femtovg-wgpu = [
    "slint/renderer-femtovg-wgpu",
    "slint/unstable-wgpu-28",
]
femtovg-wgpu-experimental = ["slint-renderer-femtovg-wgpu"]

[dependencies]
anyhow = "1.0.102"
directories = "5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "backend-winit-x11",
    "compat-1-2",
    "unstable-winit-030",
] }
tokio = "1.50.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
window-vibrancy = "0.7.1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.15.1"
winresource = "0.1.19"

[dev-dependencies]
filetime = "0.2"
i-slint-backend-testing = "1.15.1"

[patch.crates-io]
gpu-allocator = { path = "vendor/gpu-allocator" }
